# Lab2ConwayGOF

./: CMakeLists.txt  README.md  color.h  main.cpp
